2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* vprobe.cpp: Saving both real and imaginary part of the
	voltage across of the voltage probe.  Fixes the values
	given during AC analysis.

2007-01-29  Stefan Jahn  <stefan@lkcc.org>

	* tline4p.cpp, twistedpair.cpp: Fixed S-parameter calculation.

2007-01-27  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/bondwire.cpp: Fixed some bugs in the bondwire
	model.

2007-01-21  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.h (class twistedpair): New component: twisted
	pair transmission line.

	* tline4p.h (class tline4p): New component: ideal differential
	transmission line.

2007-01-14  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/bondwire.cpp: Fixed segfault in bondwire model.

2006-12-19  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/bondwire.h (class bondwire): New bondwire model
	implementation.  Thanks to Bastien.

2006-12-16  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* devices/mosfet.cpp: allow Nsub = 0 without warning

2006-11-01  Stefan Jahn  <stefan@lkcc.org>

	* verilog/qucsMODULEcore.xml: Optimized memory usage during
	transient analysis.  Also fixed a bug in the transient analysis.

2006-09-24  Stefan Jahn  <stefan@lkcc.org>

	* vrect.cpp, vpulse.cpp, vac.cpp, irect.cpp, ipulse.cpp,
	iac.cpp: Consider source factor (for source stepping) during
	transient analysis.

2006-09-14  Stefan Jahn  <stefan@lkcc.org>

	* devices/bjt.cpp: Implemented the excess phase Ptf during
	transient analysis and also fixed the AC implementation of this
	model parameter for !defined (NEWSGP).

2006-09-10  Stefan Jahn  <stefan@lkcc.org>

	* devices/bjt.cpp: Fixed implementation of transcapacitance
	dQbe/dVbc.  Also fixed NEWSGP model implementation.

2006-08-19  Stefan Jahn  <stefan@lkcc.org>

	* vrect.cpp, irect.cpp: Added delay, fall and rise times
	as properties.

2006-07-23  Stefan Jahn  <stefan@lkcc.org>

	* capacitor.cpp, inductor.cpp: Use initil condition only if
	it is really given in the netlist.
