@@ -1,3 +1,9 @@
+2007-02-04  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/mscross.cpp: Started to implement the microstrip
+	cross.  Testing needed.  Also extension for asymmetric cross
+	need some extra lines, yet.
+
 2007-02-03  Stefan Jahn  <stefan@lkcc.org>
 
 	* vprobe.cpp: Saving both real and imaginary part of the
